# platform.data.kit

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  connector-tools-proposal.md  convergence-progress.md  go.work  go.work.sum  migration-plan.md  mkdocs.yml  partitioning-not-working.md  partitioning.md  proposed.md  reactive-pipeline-proposal.md  repo-info.yaml  requirements-docs.txt  requirements.txt  sonar-project.properties
.claude/skills/: dk-new-transform.md  dk-validate.md
cli/: go.mod  go.sum  main.go
cli/cmd/: asset.go  (+74 more)
contracts/: artifact.go  asset.go  asset_test.go  binding.go  binding_test.go  cloudquery.go  cloudquery_test.go  connector.go  connector_test.go  datapackage.go  datapackage_test.go  dataset.go  dataset_test.go  destination.go  environment.go  errors.go  errors_test.go  go.mod  lock.go  model.go  pipeline.go  pipeline_test.go  pipeline_workflow.go  pipeline_workflow_test.go  schedule.go  schedule_test.go  shared.go  source.go  store.go  store_test.go  transform.go  transform_test.go  types.go  types_test.go  version.go
dashboards/: configmap.yaml  controller.json  pipeline-health.json
demos/: .gitignore  README.md  run_demo.sh
docs/: architecture.md  cli-reference.md  contributing.md  gap-analysis.md  index.md  target-state.md  testing.md
prototype-workflows/: 001-distroless-adoption.md  002-vulnerability-profile.md  003-database-claims.md
quickstart-demo/: dk.yaml  dp.yaml  go.mod  main.go
sdk/: go.mod  go.sum
sdks/python/: pyproject.toml
(+653 files in other folders)
